Adding pre-work

--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
     display: flex;
 }
 
+.stats-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
+
 .stats-card {
     background-color: #a8b0bc;
     border-radius: 7px;
@@ -72,4 +77,13 @@ button {
     padding: 1%;
     margin: 1%;
     border-radius: 7px;
+}
+
+button:hover {
+    box-shadow: 0 0 30px lightblue;
+    cursor: pointer;
+}
+
+button:active {
+    color: #aaaaaa;
 }
